solve margin overflow on index

--- a/css/basic-style.css
+++ b/css/basic-style.css
@@ -14,7 +14,7 @@ body {
   box-sizing: border-box;
   color: var(--color-primary-black);
   font-family: "Zen Kaku Gothic Antique";
-  margin-bottom: 300px;
+  /* margin-bottom: 300px; */
 }
 h1 {
   font-size: 3rem;
